# ValveSignedDistanceField

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Data/: Resize.frag  SDF.frag  SDF.glsl.frag  Smooth.frag
Data/Shaders/: Default.vert  Resize.frag  SDF.frag  Smooth.frag
ImGUI/: imgui-SFML.cpp
Sources/: SDF.cpp  SDF.h  UI.cpp  UI.h  main.cpp
